Change location of win/loss text, fix css display to visibility none

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ h3 {
 
 /* Buttons */
 .hidden {
-    display: none;
+    visibility: hidden;
 }
 
 .start-button-div>button {
